Revert "Fix OSD (HD) display overflow on Android (#3241)"
This reverts commit 4b0d4467de6cec52664f372cbfd392d867e78a9e.

--- a/src/css/tabs/osd.less
+++ b/src/css/tabs/osd.less
@@ -541,7 +541,7 @@ button {
 @media all and (max-width: 575px) {
 	.tab-osd {
 		.osd-preview {
-			width: fit-content;
+			min-width: 100%;
 			order: 1;
 		}
 		.osd-feature {
